# blueye_bts_2025_tutorial

./: .gitignore  README.md  SOURCE_ENV
src/bts_aruco_detector/: package.xml  setup.cfg  setup.py
src/bts_aruco_detector/bts_aruco_detector/: bts_aruco_detector.py  bts_aruco_detector_simulator.py  bts_aruco_docking_station.py  bts_aruco_docking_station_simulation.py
src/bts_blueye_handler/: package.xml  setup.cfg  setup.py
src/bts_blueye_handler/bts_blueye_handler/: bts_blueye_handler.py  bts_blueye_simulator_handler.py
src/bts_docking_controller/: CMakeLists.txt  package.xml
src/bts_docking_controller/include/bts_docking_controller/: bts_docking_controller.hpp  bts_pid.hpp
src/bts_docking_controller/src/: bts_docking_controller.cpp  bts_pid.cpp
src/bts_docking_guidance/: package.xml  setup.cfg  setup.py
src/bts_docking_guidance/bts_docking_guidance/: angle_transformation.py  bts_docking_guidance.py
src/bts_gz/gz_bringup/: CMakeLists.txt  package.xml
src/bts_gz/gz_bringup/config/ros_gz_bridge/: blueye_docking_scenario.yaml
src/bts_gz/gz_bringup/launch/: blueye_bts.launch.py
src/bts_gz/gz_models/models/dynamic_assets/blueye/: blueye.sdf  model.config
src/bts_gz/gz_models/models/static_assets/bts_docking_station/: model.sdf  readme.txt
src/bts_gz/gz_models/models/worlds/: bts_docking_world.sdf
src/bts_joystick_controller/: CMakeLists.txt  package.xml
src/bts_keypoint_controller/: package.xml  setup.cfg  setup.py
src/bts_keypoint_controller/bts_keypoint_controller/: bts_keypoint_controller.py
(+6 files in other folders)
